--- a/ch13-seckill/gateway/bootstrap.yaml
+++ b/ch13-seckill/gateway/bootstrap.yaml
@@ -1,23 +1,24 @@
 
 http:
-  host: 114.67.98.210
+  host: 127.0.0.1
   port: 9090
 
 
 discover:
-  Host: 114.67.98.210
+  Host: 127.0.0.1
   port: 8500
   instanceId: gateway-service-localhost
   serviceName: gateway
+  weight: 1
 
 
 config:
-  id: config-service
+  id: config-server
   profile: "dev"
   label: "master"
 
 trace:
-  host: 114.67.98.210
+  host: 127.0.0.1
   port: 9411
   url: /api/v2/spans
 
