--- a/ch13-seckill/sk-admin/bootstrap.yaml
+++ b/ch13-seckill/sk-admin/bootstrap.yaml
@@ -8,13 +8,14 @@ rpc:
   port: 9132
 
 discover:
-  Host: 114.67.98.210
+  Host: 127.0.0.1
   port: 8500
   instanceId: sk-admin-localhost
   serviceName: sk-admin
+  weight: 1
 
 
 config:
-  id: config-service
+  id: config-server
   profile: "dev"
   label: "master"
