--- a/ch13-seckill/sk-app/bootstrap.yaml
+++ b/ch13-seckill/sk-app/bootstrap.yaml
@@ -9,13 +9,13 @@ rpc:
   port: 9132
 
 discover:
-  Host: 114.67.98.210
+  Host: 127.0.0.1
   port: 8500
   instanceId: sk-app-localhost
   serviceName: sk-app # 要缓存sk-app
-
+  weight: 1
 
 config:
-  id: config-service
+  id: config-server
   profile: "dev"
   label: "master"
