--- a/ch13-seckill/sk-core/bootstrap.yaml
+++ b/ch13-seckill/sk-core/bootstrap.yaml
@@ -7,13 +7,13 @@ rpc:
   port: 9132
 
 discover:
-  Host: 114.67.98.210
+  Host: 127.0.0.1
   port: 8500
   instanceId: sk-core-localhost
   serviceName: sk-core # 要缓存sk-app
-
+  weight: 1
 
 config:
-  id: config-service
+  id: config-server
   profile: "dev"
   label: "master"
