--- a/ch13-seckill/user-service/bootstrap.yaml
+++ b/ch13-seckill/user-service/bootstrap.yaml
@@ -1,6 +1,6 @@
 
 http:
-  host: 114.67.98.210
+  host: 127.0.0.1
   port: 9009
 
 rpc:
@@ -8,12 +8,13 @@ rpc:
   port: 9108
 
 discover:
-  Host: 114.67.98.210
+  Host: 127.0.0.1
   port: 8500
   instanceId: user-service-localhost
   serviceName: user
+  weight: 1
 
 config:
-  id: config-service
+  id: config-server
   profile: "dev"
   label: "master"
